--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Member Service</title>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-    <link rel="stylesheet" href="/static/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/static/bootstrap/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    
+     <link rel="stylesheet" href="/static/font-awesome-4.7.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="/static/css/style.css">
+     <link rel="stylesheet" href="/static/css/text.css">
+     <script src="/static/jquery/jquery.min.js"></script>        
+     <script src="/static/bootstrap/bootstrap.min.js"></script> 
   </head>
   <body>
 
-  <div id="app"></div>
+  <div id="app" class="container"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
