IPAY-2055:notification, loader added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
      <link rel="stylesheet" href="/static/css/text.css">
      <script src="/static/jquery/jquery.min.js"></script>        
      <script src="/static/bootstrap/bootstrap.min.js"></script> 
-  </head>
+     <script src="/static/bootstrap/bootstrap-notify.min.js"></script> 
+     
+    </head>
   <body>
 
   <div id="app" class="container"></div>
