IPAY-2440: Tables across the app have been enhanced by using different CSS.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
      <link rel="stylesheet" href="/static/css/style.css">
      <link rel="stylesheet" href="/static/css/text.css">
      <link rel="stylesheet" href="/static/css/font.css">
-     <script src="/static/jquery/jquery.min.js"></script>        
-     <script src="/static/bootstrap/bootstrap.min.js"></script> 
-     <script src="/static/bootstrap/bootstrap-notify.min.js"></script> 
-     
+    <link rel="stylesheet" href="/static/css/semantic.min.css">
+     <script src="/static/jquery/jquery.min.js"></script>
+     <script src="/static/bootstrap/bootstrap.min.js"></script>
+     <script src="/static/bootstrap/bootstrap-notify.min.js"></script>
+
     </head>
   <body>
 
