IPAY-3840: responsive sidebar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
      <link rel="stylesheet" href="/static/css/text.css">
      <link rel="stylesheet" href="/static/css/font.css">
     <link rel="stylesheet" href="/static/css/semantic.min.css">
+    <link rel="stylesheet" href="/static/css/themify-icons.css">
+    
      <script src="/static/jquery/jquery.min.js"></script>
      <script src="/static/bootstrap/bootstrap.min.js"></script>
      <script src="/static/bootstrap/bootstrap-notify.min.js"></script>
